force-app/main/default/objects/Invoice__c/fields/Asessment_Troubleshoot__c.field-meta.xml
<CustomField>
    <fullName>Asessment_Troubleshoot__c</fullName>
    <label>Asessment/Troubleshoot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>