force-app/main/default/objects/Invoice__c/fields/Estimate__c.field-meta.xml
<CustomField>
    <fullName>Estimate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>