force-app/main/default/objects/Invoice__c/fields/Grand_total1__c.field-meta.xml
<CustomField>
    <fullName>Grand_total1__c</fullName>
    <formula>Net_Total1__c + Total_Discount__c + Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>