force-app/main/default/objects/Invoice__c/fields/Internal_Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Invoice_No__c</fullName>
    <label>Internal Invoice No</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>