force-app/main/default/objects/Invoice__c/fields/Net_Total1__c.field-meta.xml
<CustomField>
    <fullName>Net_Total1__c</fullName>
    <formula>Total_labor_Incurred_amount__c  + Total_labor_amount_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>