force-app/main/default/objects/Invoice__c/fields/Proposal_For_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Proposal_For_Repairs__c</fullName>
    <label>Proposal For Repairs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>