force-app/main/default/objects/Invoice__c/fields/Related_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Related_Vendor__c</fullName>
    <formula>($User.FirstName) +&apos;&apos; +($User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Vendor</label>
    <type>Text</type>
</CustomField>