force-app/main/default/objects/Invoice__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <formula>IF(
ISPICKVAL( Discount_Type__c , &quot;Percentage&quot;),
- ( Net_Total__c * Value__c),
IF(
ISPICKVAL(Discount_Type__c, &quot;Flat Rate&quot;),
- Value1__c,
0
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>