force-app/main/default/objects/Invoice__c/fields/Total_Labor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Labor_Amount__c</fullName>
    <label>Total Labor Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>