force-app/main/default/objects/Invoice__c/fields/Total_labor_Incurred_amount__c.field-meta.xml
<CustomField>
    <fullName>Total_labor_Incurred_amount__c</fullName>
    <label>Total labor amount Incurred</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>