force-app/main/default/objects/Invoice__c/fields/Work_Orders__c.field-meta.xml
<CustomField>
    <fullName>Work_Orders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Orders</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>